# Video_Encode_Demo

./: CMakeLists.txt  README  glad.c  main.cpp
inc/avcenc/: avcenc.h
inc/learnopengl/: camera.h  root_directory.h  shader_m.h  shader_s.h
inc/streaming/: cloudxr_input_events.h  cloudxr_streaming_common.h  cloudxr_streaming_server.h
resources/shaders/: 4.1.texture.fs  4.1.texture.vs
